# rosettacli

./: .gitignore  Cargo.toml  README.md
src/: common_commands.rs  main.rs  new.rs  packages.rs
src/controller/: mod.rs  start.rs
src/controller/containers/: container_interface.rs  mod.rs
src/controller/containers/parse/: input.rs
src/structures/: config.rs
