[package]
name = "rosettacli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.20", features = ["derive"] }
colored = "2.0.0"
regex = "1.6.0"
termsize = "0.1.6"
serde = "1.0.147"
serde_derive = "1.0.147"
toml = "0.5.9"
json = "0.12.4"
serde_yaml = "0.9.14"
indicatif = "0.17.2"
futures-util = "0.3.25"
reqwest = { version = "0.11.3", features = ["stream"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }